# rovr

./: AGENTS.md  CHANGELOG.md  README.md  codebook.toml  pyproject.toml
.github/workflows/: docs-build.yml  nuitka-build.yml
docs/scripts/: generate_keybinds.py  generate_schema.py
docs/src/content/docs/: overview.mdx
docs/src/content/docs/dev/: overview.mdx
docs/src/content/docs/dev/features/: persistent-state.mdx  previewing-files.mdx
docs/src/content/docs/dev/guides/: user-interface.mdx
docs/src/content/docs/dev/reference/: keybindings.mdx  schema.mdx
docs/src/content/docs/features/: sorting.mdx
docs/src/content/docs/get-started/: installation.mdx
docs/src/content/docs/guides/: user-interface.mdx
src/rovr/: __main__.py  app.py  state_manager.py  style.tcss
src/rovr/action_buttons/: copy_button.py  new_item_button.py  rename_item_button.py  sort_order.py  zip_button.py
src/rovr/classes/: archive.py  config.py  textual_validators.py  type_aliases.py
src/rovr/components/: popup_option_list.py  special_option_lists.py
src/rovr/config/: config.toml  migration.json  schema.json
src/rovr/config/keybinds/: sane.toml  vim.toml
src/rovr/core/: file_list.py  pinned_sidebar.py  preview_container.py
src/rovr/footer/: clipboard_container.py  metadata_container.py  process_container.py
src/rovr/functions/: config.py  folder_prefs.py  path.py  pdf.py  pins.py  preview_utils.py  system_clipboard.py
src/rovr/header/: header.py
src/rovr/monkey_patches/: puremagic_patch.py
src/rovr/navigation_widgets/: buttons.py
src/rovr/screens/: __init__.py  __main__.py  archive_creator.py  dismissable.py  fd_search.py  keybinds.py  rg_search.py  way_too_small.py  zd_to_directory.py
src/rovr/variables/: constants.py  maps.py
